# ChangeLog for games-roguelike/slashem
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-roguelike/slashem/ChangeLog,v 1.10 2005/07/09 23:04:31 vapier Exp $

  09 Jul 2005; Mike Frysinger <vapier@gentoo.org>
  +files/0.0.7E6/Gentoo.configure, slashem-0.0.760.ebuild:
  Add fix by Pekka Rousu since the path to gzip binary is diff from default
  #98318.

  27 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +files/0.0.7E6/va_copy.patch, slashem-0.0.760.ebuild:
  Added patch for gcc-3.4 from OKUMURA N. Shin-ya (bug #76509)

*slashem-0.0.760 (26 Dec 2004)

  26 Dec 2004; Mike Frysinger <vapier@gentoo.org>
  +files/0.0.7E6/GTK.configure, +files/0.0.7E6/Proxy.configure,
  +files/0.0.7E6/X11.configure, +files/0.0.7E6/dot.slashemrc,
  +files/0.0.7E6/gentoo-paths.patch, +files/0.0.7E6/gnome.configure,
  +files/0.0.7E6/makefile.patch, +files/0.0.7E6/opengl.configure,
  +files/0.0.7E6/prepare-gui.configure, +files/0.0.7E6/proxy.slashemrc,
  +files/0.0.7E6/qt.configure, +files/0.0.7E6/sdl.configure,
  +slashem-0.0.760.ebuild:
  Version bump #43500 by Pekka Rousu.

  17 Dec 2004; Joseph Jezak <josejx@gentoo.org> slashem-0.0.648.ebuild:
  Marked ppc stable.

  30 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> slashem-0.0.648.ebuild:
  virtual/x11; error check sed; tidy DEPEND; tidy use; append-flags into
  src_unpack

  15 Mar 2004; David Holm <dholm@gentoo.org> slashem-0.0.648.ebuild:
  Added to ~ppc.

  20 Jan 2004; Jon Portnoy <avenj@gentoo.org> slashem-0.0.648.ebuild :
  AMD64 keywords.

*slashem-0.0.648 (14 Aug 2003)

  14 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Pekka Rousu <prousu@despammed.com>. #11692
  This entire package is his doing and daaaaaaaaamn is it *good*.  Many thanks :)