@@ -1,36 +1,115 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 b20ea020e376e49bf054d718db45fe34 slashem-0.0.760.ebuild 4579
-MD5 4c1c791d8d418a25805cd92917235e54 ChangeLog 1818
-MD5 a7d2ae8f086e4eaf658e35e261ac9766 files/0.0.6E4F8-makefile.patch 6981
+AUX 0.0.6E4F8-errno.patch 4788 RMD160 247311f74d49efcb95796b2126f585a215413a25 SHA1 fcaa0bba7cf7fc38877d2d7b1c8f412659a30eaa SHA256 0e9995cd71e8fa600f3ee31e5bb5318313d705fa596071f4fabaf5bf763d511c
 MD5 7042d07dab18e8ce6bf5f99c2497db44 files/0.0.6E4F8-errno.patch 4788
-MD5 18340044152321018649d5b65c31278b files/X11.configure 630
+RMD160 247311f74d49efcb95796b2126f585a215413a25 files/0.0.6E4F8-errno.patch 4788
+SHA256 0e9995cd71e8fa600f3ee31e5bb5318313d705fa596071f4fabaf5bf763d511c files/0.0.6E4F8-errno.patch 4788
+AUX 0.0.6E4F8-gentoo-paths.patch 818 RMD160 ac25382130a4b9075edfa7fa6b8ba34631ec00d0 SHA1 73d161375902c25fe84b21fed89cbbe41acf1179 SHA256 760f9c4bd1ff346fa6e5422be19991021ad357b1a7d32815b5ca357ef4ce55da
 MD5 c0702cf01cb9b34fb41418616181e7e8 files/0.0.6E4F8-gentoo-paths.patch 818
-MD5 7e5fae501e9a74fb3bc3eb1569308cdc files/dot.slashemrc 3491
-MD5 07f0de2a5c98da1af7a9e3ca3ce377fd files/qt.configure 182
-MD5 582f28b3c2d30a80415ff9c92ca6e77b files/gnome.configure 275
-MD5 b38854e3518f58d3deb1751abf1049d9 files/gtk.configure 238
-MD5 0cc7bbd2fbdb25cb8319834963f723ba files/digest-slashem-0.0.760 119
-MD5 904e9a3b63565bebc075ee2e49c0fa6f files/0.0.7E6/va_copy.patch 637
-MD5 6cca35560986e700c5cd8b07e571790e files/0.0.7E6/X11.configure 400
-MD5 5cd69b99d18037476dceab4956fee07a files/0.0.7E6/Gentoo.configure 90
-MD5 a27b3edac6eefbb0c4e45ef0474125ee files/0.0.7E6/dot.slashemrc 3721
+RMD160 ac25382130a4b9075edfa7fa6b8ba34631ec00d0 files/0.0.6E4F8-gentoo-paths.patch 818
+SHA256 760f9c4bd1ff346fa6e5422be19991021ad357b1a7d32815b5ca357ef4ce55da files/0.0.6E4F8-gentoo-paths.patch 818
+AUX 0.0.6E4F8-makefile.patch 6981 RMD160 f40efbd409f0e5a4f2c9a3a6f8079a3c39dbd907 SHA1 54ead43ee14cc83f03d2f6fcf1d3946c7afc44fd SHA256 5a7e642efd9bba232b05dde7b9d47301414f463e82301b413095106f08f462a3
+MD5 a7d2ae8f086e4eaf658e35e261ac9766 files/0.0.6E4F8-makefile.patch 6981
+RMD160 f40efbd409f0e5a4f2c9a3a6f8079a3c39dbd907 files/0.0.6E4F8-makefile.patch 6981
+SHA256 5a7e642efd9bba232b05dde7b9d47301414f463e82301b413095106f08f462a3 files/0.0.6E4F8-makefile.patch 6981
+AUX 0.0.7E6/GTK.configure 426 RMD160 ae77acb4cefbb97af3de9925b39cd9714f7fbd9c SHA1 1127101c065fc50cccb84f0279f1caf529fc13c0 SHA256 1f5ed587c7d6e6b3bcd2a5d7e3b41bc36519ea32dc066eea736349d0d208683b
 MD5 57e259af161fb4cd14a21274e271a075 files/0.0.7E6/GTK.configure 426
-MD5 383053d0044677bb32c98ccc1851258c files/0.0.7E6/opengl.configure 151
-MD5 517442a1ef6bed1c0a4547422d3fe256 files/0.0.7E6/sdl.configure 258
+RMD160 ae77acb4cefbb97af3de9925b39cd9714f7fbd9c files/0.0.7E6/GTK.configure 426
+SHA256 1f5ed587c7d6e6b3bcd2a5d7e3b41bc36519ea32dc066eea736349d0d208683b files/0.0.7E6/GTK.configure 426
+AUX 0.0.7E6/Gentoo.configure 90 RMD160 103abaffdd60bcc05ae6e110833af0f42138a85a SHA1 9ae45615aac93f618b8630c9f33ee0842dd2bbf0 SHA256 ded148e9b16992812eb7eb894584a36d06ba9f239b12cce150ed8e2d55fda579
+MD5 5cd69b99d18037476dceab4956fee07a files/0.0.7E6/Gentoo.configure 90
+RMD160 103abaffdd60bcc05ae6e110833af0f42138a85a files/0.0.7E6/Gentoo.configure 90
+SHA256 ded148e9b16992812eb7eb894584a36d06ba9f239b12cce150ed8e2d55fda579 files/0.0.7E6/Gentoo.configure 90
+AUX 0.0.7E6/Proxy.configure 395 RMD160 f1b097d3950d5c69af90e1510fd787b403a4ea19 SHA1 873313e6dfe9119505ed210ea7799b1bda2b404e SHA256 1d32355db3f198c87a16a5ec3fc6070762adbbb3b791f8caa0ea632fc352327d
 MD5 4a10db62e5c14c0a33073f355e22b371 files/0.0.7E6/Proxy.configure 395
-MD5 1c4bea59f5c12d1fb16c3bb9854805e9 files/0.0.7E6/qt.configure 414
-MD5 3ccc6578d2395a9e31cf14cf97234921 files/0.0.7E6/proxy.slashemrc 207
-MD5 a390d1fc8a476b52da0e6e45e01001b1 files/0.0.7E6/gnome.configure 380
+RMD160 f1b097d3950d5c69af90e1510fd787b403a4ea19 files/0.0.7E6/Proxy.configure 395
+SHA256 1d32355db3f198c87a16a5ec3fc6070762adbbb3b791f8caa0ea632fc352327d files/0.0.7E6/Proxy.configure 395
+AUX 0.0.7E6/X11.configure 400 RMD160 fc3cddae693ba2fbcb58339b495c0f38dc2e386b SHA1 82a32597d03153f1f5f87c91af6631566bcefd35 SHA256 3dc9ae85878c916e671edb51ba05b9a322c235eaab34aa76160cf45aeca3020a
+MD5 6cca35560986e700c5cd8b07e571790e files/0.0.7E6/X11.configure 400
+RMD160 fc3cddae693ba2fbcb58339b495c0f38dc2e386b files/0.0.7E6/X11.configure 400
+SHA256 3dc9ae85878c916e671edb51ba05b9a322c235eaab34aa76160cf45aeca3020a files/0.0.7E6/X11.configure 400
+AUX 0.0.7E6/dot.slashemrc 3721 RMD160 6751f7395e17c42ea04c3bff15408b6bcea1418a SHA1 bf38997753282aca3021036ff1e0afdf84d1fde8 SHA256 6bc574f5ba67c6999f2680087fecf9edbc8c3848bcc493f0e753afd039027673
+MD5 a27b3edac6eefbb0c4e45ef0474125ee files/0.0.7E6/dot.slashemrc 3721
+RMD160 6751f7395e17c42ea04c3bff15408b6bcea1418a files/0.0.7E6/dot.slashemrc 3721
+SHA256 6bc574f5ba67c6999f2680087fecf9edbc8c3848bcc493f0e753afd039027673 files/0.0.7E6/dot.slashemrc 3721
+AUX 0.0.7E6/gentoo-paths.patch 818 RMD160 ac25382130a4b9075edfa7fa6b8ba34631ec00d0 SHA1 73d161375902c25fe84b21fed89cbbe41acf1179 SHA256 760f9c4bd1ff346fa6e5422be19991021ad357b1a7d32815b5ca357ef4ce55da
 MD5 c0702cf01cb9b34fb41418616181e7e8 files/0.0.7E6/gentoo-paths.patch 818
-MD5 b9c67a0a6c43921a62aeab60b9b635c4 files/0.0.7E6/prepare-gui.configure 1466
+RMD160 ac25382130a4b9075edfa7fa6b8ba34631ec00d0 files/0.0.7E6/gentoo-paths.patch 818
+SHA256 760f9c4bd1ff346fa6e5422be19991021ad357b1a7d32815b5ca357ef4ce55da files/0.0.7E6/gentoo-paths.patch 818
+AUX 0.0.7E6/gnome.configure 380 RMD160 95cb4f15f69245a94e5744327a407a8fb2f97d01 SHA1 5f18a3311d5bf0d9a36b2d3e3f5c895823a3f82d SHA256 45be8cb6a7bbdac20c96849439a22ba237e597a97bbdca7101af48e4167e1cb2
+MD5 a390d1fc8a476b52da0e6e45e01001b1 files/0.0.7E6/gnome.configure 380
+RMD160 95cb4f15f69245a94e5744327a407a8fb2f97d01 files/0.0.7E6/gnome.configure 380
+SHA256 45be8cb6a7bbdac20c96849439a22ba237e597a97bbdca7101af48e4167e1cb2 files/0.0.7E6/gnome.configure 380
+AUX 0.0.7E6/makefile.patch 1258 RMD160 53ffccf46cfbbcef65adc4c2187b51861d34cddb SHA1 ba95d004e2de3f039afa9f431e8a31b46d74cfff SHA256 3ae43ed234b179f08d00de65bde32c2d8a674251bc9b61126fa738a0b740fcb0
 MD5 4f096566a3684ce493ef00b49d0c08cd files/0.0.7E6/makefile.patch 1258
+RMD160 53ffccf46cfbbcef65adc4c2187b51861d34cddb files/0.0.7E6/makefile.patch 1258
+SHA256 3ae43ed234b179f08d00de65bde32c2d8a674251bc9b61126fa738a0b740fcb0 files/0.0.7E6/makefile.patch 1258
+AUX 0.0.7E6/opengl.configure 151 RMD160 d893345be8e85b2cfcb350af539ab0e41ed77b89 SHA1 e1c420b2c8b7ec945ca28071a2d7646fb1ec4338 SHA256 59f7c34f023618ee03016f4dbb4e7d591607bdee27173a8606efc2973039023a
+MD5 383053d0044677bb32c98ccc1851258c files/0.0.7E6/opengl.configure 151
+RMD160 d893345be8e85b2cfcb350af539ab0e41ed77b89 files/0.0.7E6/opengl.configure 151
+SHA256 59f7c34f023618ee03016f4dbb4e7d591607bdee27173a8606efc2973039023a files/0.0.7E6/opengl.configure 151
+AUX 0.0.7E6/prepare-gui.configure 1466 RMD160 7c0d0d5915bb74fe6ce6d595e6824e07169e169e SHA1 c597565c61701565485e9de5109cdeb356fc61de SHA256 8e3bd88d3ff70aecb61c3d80bab4b93c40e5244ea66635d26f052d0a715e0269
+MD5 b9c67a0a6c43921a62aeab60b9b635c4 files/0.0.7E6/prepare-gui.configure 1466
+RMD160 7c0d0d5915bb74fe6ce6d595e6824e07169e169e files/0.0.7E6/prepare-gui.configure 1466
+SHA256 8e3bd88d3ff70aecb61c3d80bab4b93c40e5244ea66635d26f052d0a715e0269 files/0.0.7E6/prepare-gui.configure 1466
+AUX 0.0.7E6/proxy.slashemrc 207 RMD160 820fac36f75dcdb3444d6648694a33914aed6728 SHA1 d14f89dc42a4524659674b81a3b3d041aa87c7aa SHA256 c1d75951449297fc7fa8e8f9e754c51c26c53a226cef3d087349272347b63863
+MD5 3ccc6578d2395a9e31cf14cf97234921 files/0.0.7E6/proxy.slashemrc 207
+RMD160 820fac36f75dcdb3444d6648694a33914aed6728 files/0.0.7E6/proxy.slashemrc 207
+SHA256 c1d75951449297fc7fa8e8f9e754c51c26c53a226cef3d087349272347b63863 files/0.0.7E6/proxy.slashemrc 207
+AUX 0.0.7E6/qt.configure 414 RMD160 590c36392a1d7927fa98e00a1320ab6e7c64e7d1 SHA1 4840176b05cde8f84be8c9a01e13c09be76bc753 SHA256 e14230be03b8a77f316ac7841376988fd562e987f887fd115a75e7c8e924e471
+MD5 1c4bea59f5c12d1fb16c3bb9854805e9 files/0.0.7E6/qt.configure 414
+RMD160 590c36392a1d7927fa98e00a1320ab6e7c64e7d1 files/0.0.7E6/qt.configure 414
+SHA256 e14230be03b8a77f316ac7841376988fd562e987f887fd115a75e7c8e924e471 files/0.0.7E6/qt.configure 414
+AUX 0.0.7E6/sdl.configure 258 RMD160 50b0e3667f767ac3e54f45f2fcfa8c55926b3624 SHA1 34a22668f1fb65e67e58720ef5ce421c1f095cec SHA256 3c2e408764f93d46c024f309e20379bb5f87ddd3518a078029ba2532bd5d8554
+MD5 517442a1ef6bed1c0a4547422d3fe256 files/0.0.7E6/sdl.configure 258
+RMD160 50b0e3667f767ac3e54f45f2fcfa8c55926b3624 files/0.0.7E6/sdl.configure 258
+SHA256 3c2e408764f93d46c024f309e20379bb5f87ddd3518a078029ba2532bd5d8554 files/0.0.7E6/sdl.configure 258
+AUX 0.0.7E6/va_copy.patch 637 RMD160 26758f3e1aba238c93d731fcbe6081d495001da1 SHA1 d51bb5b01817554a308034c9d82873c4ea02f82c SHA256 b1b4f00369cb1ef7b64a8e9a85a88901ddae3f5a6722df486d4b28c66fa965a4
+MD5 904e9a3b63565bebc075ee2e49c0fa6f files/0.0.7E6/va_copy.patch 637
+RMD160 26758f3e1aba238c93d731fcbe6081d495001da1 files/0.0.7E6/va_copy.patch 637
+SHA256 b1b4f00369cb1ef7b64a8e9a85a88901ddae3f5a6722df486d4b28c66fa965a4 files/0.0.7E6/va_copy.patch 637
+AUX X11.configure 630 RMD160 2e8a499a45ab0485a0a50b135fb590cf3f74e5b3 SHA1 cf837408fd06493ef2e74b6c4ef6f4e3e9e460dc SHA256 a47dc928e8da9ea99e8a2a90325a4e67d8c99574b95e863e25333114fee3c1c0
+MD5 18340044152321018649d5b65c31278b files/X11.configure 630
+RMD160 2e8a499a45ab0485a0a50b135fb590cf3f74e5b3 files/X11.configure 630
+SHA256 a47dc928e8da9ea99e8a2a90325a4e67d8c99574b95e863e25333114fee3c1c0 files/X11.configure 630
+AUX dot.slashemrc 3491 RMD160 063f7cbb0d0b7ec1ddf014b8e7b91b4f579ae2b8 SHA1 95983f1d486596ef26f99c9fff82ea56e2d279d0 SHA256 c42763e4a35178fcf87a96837b1e709b6b2bc21f45444daa5680caf293e8722c
+MD5 7e5fae501e9a74fb3bc3eb1569308cdc files/dot.slashemrc 3491
+RMD160 063f7cbb0d0b7ec1ddf014b8e7b91b4f579ae2b8 files/dot.slashemrc 3491
+SHA256 c42763e4a35178fcf87a96837b1e709b6b2bc21f45444daa5680caf293e8722c files/dot.slashemrc 3491
+AUX gnome.configure 275 RMD160 7f0259a56bf6b5ea0fb284000496df3f72d7503f SHA1 62ccf4ba04ec9f05fe9cd32525841d2a4614745a SHA256 f7e01b77fe438392f6aad097e8f2891b74cfcda5fd050029b0cae19ddbfeceae
+MD5 582f28b3c2d30a80415ff9c92ca6e77b files/gnome.configure 275
+RMD160 7f0259a56bf6b5ea0fb284000496df3f72d7503f files/gnome.configure 275
+SHA256 f7e01b77fe438392f6aad097e8f2891b74cfcda5fd050029b0cae19ddbfeceae files/gnome.configure 275
+AUX gtk.configure 238 RMD160 80050d7a1e1a8ed79ac510eee0d2e14e0a83b703 SHA1 ea435532bda959aa75dfba8ca4e007ce970f8e12 SHA256 24d07c2c678929ad99dd0a2c65e1f70be94c31972558fc10559e682a831643d7
+MD5 b38854e3518f58d3deb1751abf1049d9 files/gtk.configure 238
+RMD160 80050d7a1e1a8ed79ac510eee0d2e14e0a83b703 files/gtk.configure 238
+SHA256 24d07c2c678929ad99dd0a2c65e1f70be94c31972558fc10559e682a831643d7 files/gtk.configure 238
+AUX qt.configure 182 RMD160 743b422c17a9d5d7998e30d1e3fb06ca931365fd SHA1 483e0e2382e6d28f001a8f40eb1d41a9b2f250fd SHA256 c4a51751d8bf30b910e3a157a4782d4630c08967dd01671f4e7e099f6e648ea0
+MD5 07f0de2a5c98da1af7a9e3ca3ce377fd files/qt.configure 182
+RMD160 743b422c17a9d5d7998e30d1e3fb06ca931365fd files/qt.configure 182
+SHA256 c4a51751d8bf30b910e3a157a4782d4630c08967dd01671f4e7e099f6e648ea0 files/qt.configure 182
+DIST conf12s.tar.gz 4788
+DIST se007e6f3.tar.gz 5213184
+EBUILD slashem-0.0.760.ebuild 4595 RMD160 14ff871fd276a2245bddb1d6321dbc14b85a3752 SHA1 eccab657e23efe909edf0969b389abbb24fdb21d SHA256 9ec23368c49ecc93116fda84efe5f3f313c8927107d4d7fc73d5927fb32fa1c6
+MD5 dd05c3668af8c4a6ed683a2a132e9adf slashem-0.0.760.ebuild 4595
+RMD160 14ff871fd276a2245bddb1d6321dbc14b85a3752 slashem-0.0.760.ebuild 4595
+SHA256 9ec23368c49ecc93116fda84efe5f3f313c8927107d4d7fc73d5927fb32fa1c6 slashem-0.0.760.ebuild 4595
+MISC ChangeLog 1957 RMD160 a7955cafaaeef6dcfd4fbc190456206d14b5c7f1 SHA1 212aae968ffa8ff92f510d1f421cfb097644baf4 SHA256 2d509596c2e8c56819d98a5674dce40c9f57e9282633394ef6c5429864f385c9
+MD5 c69d99a768448270d3766550f8cc95db ChangeLog 1957
+RMD160 a7955cafaaeef6dcfd4fbc190456206d14b5c7f1 ChangeLog 1957
+SHA256 2d509596c2e8c56819d98a5674dce40c9f57e9282633394ef6c5429864f385c9 ChangeLog 1957
+MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
+SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
+MD5 0cc7bbd2fbdb25cb8319834963f723ba files/digest-slashem-0.0.760 119
+RMD160 d219bae1375865d7b71cf612c0eb23aab2801c8d files/digest-slashem-0.0.760 119
+SHA256 d5fcefd3e998450f0e557b2771666749b2de5d2041737211181b2ac85527bde3 files/digest-slashem-0.0.760 119
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.1 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFC0Fg9gIKl8Uu19MoRAtWeAJoCSTCG9p204rnO9UkvEjCWccGr8wCfQNjO
-3ELVywGruC63wQUWJuxHcfU=
-=XSWW
+iD8DBQFEiM2CkT4lNIS36YERAnzeAJ481NSUk7Z7sJpLVsfNjHXtwMnHSACfflFc
+13xgQDskSo78b5WOWIj9lns=
+=KZMA
 -----END PGP SIGNATURE-----
