@@ -1,6 +1,10 @@
 # ChangeLog for games-roguelike/slashem
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-roguelike/slashem/ChangeLog,v 1.10 2005/07/09 23:04:31 vapier Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-roguelike/slashem/ChangeLog,v 1.11 2006/06/09 01:23:15 wolf31o2 Exp $
+
+  09 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  slashem-0.0.760.ebuild:
+  Added sys-devel/bc to DEPEND and closing bug #135762.
 
   09 Jul 2005; Mike Frysinger <vapier@gentoo.org>
   +files/0.0.7E6/Gentoo.configure, slashem-0.0.760.ebuild:
